<?xml version="1.0" encoding="utf-8"?>
<!-- 
   Copyright 2010 Brian C. Young and contributors
   
   Licensed under the Apache License, Version 2.0 (the "License"); you may 
   not use this file except in compliance with the License. You may obtain a 
   copy of the License at 
   
       http://www.apache.org/licenses/LICENSE-2.0 
   
   Unless required by applicable law or agreed to in writing, software 
   distributed under the License is distributed on an "AS IS" BASIS, 
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
   See the License for the specific language governing permissions and 
   limitations under the License. 
      -->
<resources>
	<!-- Application and Activity titles -->
    <string name="app_name">Ticket Scanner</string>
    <string name="selector_activity_title">Choose a ticket list</string>
    <string name="import_activity_title">Import a new ticket list</string>
    <string name="scan_activity_title">Scanning Tickets</string>
    <string name="about_activity_title">About Ticket Scanner</string>

	<!-- UI strings for selector screen -->
    <string name="import_list">Import a new list</string>
    <string name="reading_existing">Reading existing lists...</string>
    <string name="no_name">(no name)</string>

	<!-- UI strings for scanner screen -->    
    <string name="last_scanned">Last scanned:</string>
    <string name="tickets_scanned">Tickets scanned:</string>
    <string name="tickets_in_list">Tickets in list:</string>
    <string name="duplicates">Duplicates:</string>
    <string name="scan">Scan!</string>

	<!-- UI strings for importer screen -->
    <string name="url_label">Address of list to import:</string>
    <string name="url_hint">URL to CSV file</string>
    <string name="name_label">Name for imported list:</string>
    <string name="name_hint">Name</string>
    <string name="downloading">Downloading...</string>
    <string name="updating_db">Updating database...</string>

    <string name="fail_list_exists">There is already a list with that name.</string>
    <string name="fail_bad_list_name">For now, we don\'t support lists with complex names.</string>
    <string name="fail_sql_error">A SQL error occurred.</string>
    
    <!-- Menu items -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="email_list">Email List Status</string>
    <string name="clear_list">Clear List History</string>
    <string name="delete_list">Delete List</string>
    
</resources>
